# sphericart

./: .clang-format  .codespellrc  .gitignore  .readthedocs.yml  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  example.c  example.py  pyproject.toml  set_library_path.sh  set_library_path.txt  setup.cfg  setup.py  sphericart.c  sphericart.h  tox.ini
Makefiles/: Makefile_clang  Makefile_gcc  Makefile_icc
SpheriCart.jl/: LICENSE  Manifest.toml  Project.toml  README.md
benchmarks/: CMakeLists.txt
benchmarks/cpp/: benchmark.cpp
benchmarks/jax/: benchmark.py
benchmarks/pytorch/: benchmark.py  benchmark_grad_grad.py  benchmark_hessians.py  benchmark_jax.py  benchmark_second_derivatives.py
benchmarks/sycl/: benchmark_sycl.cpp
ci/: pipeline.yml
cmake/: install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  make_includeable.cmake  prepend_headers.cmake  variables.cmake
docs/: Doxyfile  api.rst  conf.py  index.rst  inject-katex.html  installation.rst  requirements.txt
example/: CMakeLists.txt
examples/: CMakeLists.txt
examples/c/: Makefile  example  example.c  set_library_path.txt
examples/cpp/: Makefile  example.cpp
examples/cuda/: example.cu
examples/jax/: example.py
examples/kokkos/: example.cpp
examples/metatensor/: example.py
examples/py/: example.py
examples/python/: complex.py  cupy.py  example.py  spherical.py  spherical_and_complex.py
examples/pytorch/: example.py  torchscript.py
examples/sycl/: example.cpp
include/: sphericart.h  sphericart.hpp
julia/: Project.toml  README.md
julia-v0.0.3/: .buildinfo  api.html  c-examples.html  cpp-api.html  cpp-examples.html  examples.html  genindex.html  index.html  jax-api.html  jax-examples.html  maths.html  objects.inv  python-api.html  python-examples.html  pytorch-examples.html  searchindex.js
julia-v0.1.3/: cuda-examples.html  genindex.html  installation.html  jax-examples.html  python-api.html  pytorch-api.html  pytorch-examples.html
julia-v0.2.0/: .buildinfo  cpp-examples.html  cuda-api.html  examples.html  index.html  python-examples.html  spherical-complex.html
latest/: .buildinfo  api.html  c-api.html  c-examples.html  cpp-api.html  cpp-examples.html  cuda-api.html  cuda-examples.html  examples.html  genindex.html  index.html  installation.html  jax-api.html  jax-examples.html  maths.html  metatensor-api.html  objects.inv  python-api.html  python-examples.html  pytorch-api.html  pytorch-examples.html  search.html  searchindex.js  spherical-complex.html
scripts/: check-format.sh  cibw-cuda-setup.sh  cibw-setup.sh  cibw-torch-cuda-setup.sh  clean-python.sh  create-jax-versions-range.py  (+3 more)
sphericart/: CMakeLists.txt  __init__.py  library.py  spherical_harmonics.py  wrappers.py
sphericart-jax/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  sphericart
sphericart-jax/build-backend/: backend.py
sphericart-jax/include/sphericart/: jax_cuda.hpp  kernel_helpers.h  pybind11_kernel_helpers.h  pybind11_kernel_helpers.hpp  sphericart_jax_cuda.hpp
sphericart-jax/python/: sph_ops.py
sphericart-jax/python/sphericart/jax/: __init__.py  ddsph.py  dsph.py  sph.py  sph_ops.py  spherical_harmonics.py  trace_jax.py  utils.py
sphericart-jax/python/tests/: dummy_sph.py  pure_jax_sph.py  segfault_test.py  simple_jax_test.py  test.py  test_autograd.py  test_consistency.py  test_dummy.py  test_grads.py  test_nn.py  test_no_points.py  test_precision.py  test_pure_jax.py  test_script.py  test_transforms.py  utils.py
sphericart-jax/src/: jax.cpp  jax_cuda.cpp  jax_cuda.cu  sphericart_jax_cpu.cpp  sphericart_jax_cuda.cpp  sphericart_jax_cuda.cu
sphericart-torch/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
sphericart-torch/build-backend/: backend.py
sphericart-torch/include/sphericart/: autograd.hpp  cuda.hpp  torch.hpp  torch_cuda_wrapper.hpp
sphericart-torch/python/sphericart/torch/: __init__.py  e3nn.py  metatensor.py  register.py  spherical_hamonics.py
sphericart-torch/python/sphericart/torch/metatensor/: __init__.py
sphericart-torch/python/tests/: test_autograd.py  test_compile.py  test_cuda.py  test_cuda_stream.py  test_e3nn.py  test_hessian.py  test_lib_path.py  test_metatensor.py  test_nn.py  test_no_neighbours.py  test_no_points.py  test_precision.py  test_script.py
sphericart-torch/src/: autograd.cpp  cuda.cu  cuda_base.cu  cuda_stub.cpp  streams.cpp  torch.cpp  torch_cuda_wrapper.cpp  torch_cuda_wrapper_stub.cpp
sphericart/cmake/: sphericart-config-version.in.cmake  sphericart-config.in.cmake
sphericart/examples/: CMakeLists.txt  example.c  example.cpp
sphericart/include/: cuda.hpp  cuda_base.hpp  cuda_cache.hpp  dynamic_cuda.hpp  jittify.hpp  macros.hpp  sphericart.h  sphericart.hpp  sphericart_cuda.hpp  sphericart_impl.cuh  sphericart_impl_i.cuh  sphericart_impl_sycl.hpp  sphericart_sycl.hpp  sycl_alloc.hpp  sycl_base.hpp  sycl_device.hpp  templates.hpp  templates_core.hpp
sphericart/src/: cuda_base copy.cu  cuda_base.cpp  cuda_base.cu  cuda_stub.cpp  macros.hpp  omp_support.h  sphericart-capi.cpp  sphericart.cpp  sphericart_cuda.cpp  sphericart_cuda.cu  sphericart_cuda_stub.cpp  sphericart_impl.cu  sphericart_impl_sycl.cpp  sphericart_sycl.cpp  sycl_base.cpp  templates.hpp
sphericart/tests/: CMakeLists.txt  test_derivatives.cpp  test_derivatives_sycl.cpp  test_hardcoding.cpp  test_samples.cpp  timings.cpp
src/: CMakeLists.txt  macros.hpp  sphericart-capi.cpp  sphericart.c  sphericart.cpp  templates.hpp
test/: CMakeLists.txt
test/source/: sphericart_test.c
torch/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
torch/cmake/: FindCUDNN.cmake
torch/cuda_extension/: setup.py  spherical_harmonics.cu  test.py
torch/include/sphericart/: autograd.hpp  cuda.hpp  torch.hpp
torch/python/src/sphericart_torch/: __init__.py
torch/python/tests/: autograd.py  test_autograd.py  test_cuda.py  test_e3nn.py  test_precision.py
torch/src/: autograd.cpp  cuda.cu  cuda_stub.cpp  spherical_harmonics.cu  torch.cpp
(+436 files in other folders)
