[build-system]
requires = [
    "setuptools >=44",
    "wheel >=0.36",
    "cmake",
]
build-backend = "setuptools.build_meta"


[tool.isort]
skip = "__init__.py"
profile = "black"
line_length = 88
indent = 4
include_trailing_comma = true
lines_after_imports = 2
known_first_party = "sphericart_torch"
