[project]
name = "sphericart"
dynamic = ["version", "optional-dependencies"]
requires-python = ">=3.9"
dependencies = ["numpy"]

readme = "README.md"
license = "Apache-2.0 or MIT"
description = "Fast calculation of spherical harmonics"
authors = [
    {name = "Filippo Bigi"},
    {name = "Guillaume Fraux"},
    {name = "Nicholas Browning"},
    {name = "Michele Ceriotti"},
]

keywords = ["spherical harmonics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/lab-cosmo/sphericart"
documentation = "https://sphericart.readthedocs.io/en/latest/"
repository = "https://github.com/lab-cosmo/sphericart"

### ======================================================================== ###

[build-system]
requires = [
    "setuptools >=44",
    "wheel >=0.36",
    "cmake",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["python/src"]
include = ["sphericart*"]
namespaces = false

### ======================================================================== ###

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B018", "B904"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["sphericart"]

[tool.ruff.format]
docstring-code-format = true
