[project]
name = "sphericart-jax"
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"

readme = "README.md"
license = "Apache-2.0 or MIT"
description = "JAX bindings to sphericart"
authors = [
    {name = "Filippo Bigi"},
    {name = "Guillaume Fraux"},
    {name = "Nicholas Browning"},
    {name = "Michele Ceriotti"},
    {name = "Felix Musil"},
]

keywords = ["spherical harmonics", "jax"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/lab-cosmo/sphericart"
documentation = "https://sphericart.readthedocs.io/en/latest/"
repository = "https://github.com/lab-cosmo/sphericart"

### ======================================================================== ###

[build-system]
requires = [
    "setuptools >=77",
    "wheel >=0.36",
]
# use a custom build backend to add a dependency on jax/cmake only when
# building wheels
build-backend = "backend"
backend-path = ["build-backend"]


[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["python"]
include = ["sphericart*"]
namespaces = true
