[project]
name = "sphericart-torch"
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

readme = "README.md"
license = {text = "Apache-2.0"}
description = "TorchScript bindings to sphericart"
authors = [
    {name = "Filippo Bigi"},
    {name = "Guillaume Fraux"},
    {name = "Nicholas Browning"},
    {name = "Michele Ceriotti"},
]

keywords = ["spherical harmonics", "torch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: GPU :: NVIDIA CUDA",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/lab-cosmo/sphericart"
documentation = "https://sphericart.readthedocs.io/en/latest/"
repository = "https://github.com/lab-cosmo/sphericart"

### ======================================================================== ###

[build-system]
requires = [
    "setuptools >=44",
    "wheel >=0.36",
    "cmake >=3.30",
]
# use a custom build backend to add a dependency on torch/cmake only when
# building wheels
build-backend = "backend"
backend-path = ["build-backend"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["python"]
include = ["sphericart*"]
namespaces = true
